; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pubdec.c_decrypt_rsa.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgp-pubdec.c_decrypt_rsa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@PGP_PUB_RSA_ENCRYPT = common dso_local global i64 0, align 8
@PGP_PUB_RSA_ENCRYPT_SIGN = common dso_local global i64 0, align 8
@PXE_PGP_WRONG_KEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*, i32**)* @decrypt_rsa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decrypt_rsa(%struct.TYPE_4__* %0, i32* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @PGP_PUB_RSA_ENCRYPT, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %3
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @PGP_PUB_RSA_ENCRYPT_SIGN, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* @PXE_PGP_WRONG_KEY, align 4
  store i32 %22, i32* %4, align 4
  br label %38

23:                                               ; preds = %15, %3
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @pgp_mpi_read(i32* %24, i32** %9)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = load i32, i32* %8, align 4
  store i32 %29, i32* %4, align 4
  br label %38

30:                                               ; preds = %23
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %32 = load i32*, i32** %9, align 8
  %33 = load i32**, i32*** %7, align 8
  %34 = call i32 @pgp_rsa_decrypt(%struct.TYPE_4__* %31, i32* %32, i32** %33)
  store i32 %34, i32* %8, align 4
  %35 = load i32*, i32** %9, align 8
  %36 = call i32 @pgp_mpi_free(i32* %35)
  %37 = load i32, i32* %8, align 4
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %30, %28, %21
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @pgp_mpi_read(i32*, i32**) #1

declare dso_local i32 @pgp_rsa_decrypt(%struct.TYPE_4__*, i32*, i32**) #1

declare dso_local i32 @pgp_mpi_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
